# caps

./: .cproject  .project  CMakeLists.txt  README.md
.github/: FUNDING.yml
Samples/: PPSA_EX01.OUT  PPSA_EX04.OUT  PPSA_EX04_4.OUT  TEST1.TXT  TEST1986.TXT  TEST1991.TXT  TEST2.TXT  TEST3.TXT  TEST4.TXT  TEST4_2.TXT  TESTII1.TXT  TESTII2.TXT  test.txt
src/: CMakeLists.txt  ConcentratedSystem.cpp  ConcentratedSystem.hpp  DistributedSystem.cpp  DistributedSystem.hpp  LoadAndInteraction.cpp  LoadAndInteraction.hpp  LoadNodal.cpp  LoadNodal.hpp  LoadPoint.cpp  LoadPoint.hpp  LoadTrapezoidal.cpp  LoadTrapezoidal.hpp  LoadTrapezoidalExtra.hpp  LoadUniform.cpp  LoadUniform.hpp  MaterialProperty.cpp  MaterialProperty.hpp  Member.cpp  Member.hpp  MemberAnalysis.hpp  Node.cpp  Node.hpp  NodeDegree.hpp  PPSAFile.cpp  PPSAFile.hpp  PlaneFrame.cpp  PlaneFrame.hpp  ProblemSize.cpp  ProblemSize.hpp  Reaction.cpp  Reaction.hpp  Report.cpp  Report.hpp  ReportFormat.hpp  StiffnessMatrix.cpp  StiffnessMatrix.hpp  StressFactors.cpp  StressFactors.hpp  SystemDef.hpp  (+2 more)
